--- a/public/f_assets/css/widgets.css
+++ b/public/f_assets/css/widgets.css
@@ -122,7 +122,7 @@ span.has-dot::before{content:"";width:3px;height:3px;background:#999;border-radi
 .post-module-1 .post-content-overlay .entry-meta span.post-cat,
 .entry-meta.meta-0 span.post-cat{padding-right:7px;margin-right:10px;font-weight:bold;color:#666;}
 .post-module-1 .post-content-overlay .entry-meta span.post-cat::after,
-.entry-meta.meta-0 span.post-cat::after{content:"";width:3px;height:3px;background:#999;position:absolute;right:0;bottom:3px;border-radius:50%}
+/* .entry-meta.meta-0 span.post-cat::after{content:"";width:3px;height:3px;background:#999;position:absolute;right:0;bottom:3px;border-radius:50%} */
 .post-module-1 .post-content-overlay .entry-meta.text-white span.post-cat::after{background:#fff;}
 .slick-dots{display:-webkit-box;display:flex;-webkit-box-pack:center;justify-content:center;margin:0;padding:0;list-style-type:none;}
 .slick-dots li{margin:0 0.15rem;}
